# matplotlib-window-tracker

./: .gitignore  README.md  mpl-nonblock.sublime-project  pyproject.toml
.github/workflows/: release.yml
examples/: Makefile  animated_sine_demo.py  backend_switch_probe.py  demo.py  high_fps_two_windows.py  hold_windows_demo.py  matplotlib_native_mwe.py  recommended_backend_demo.py  simple_animated_sine_demo.py  two_windows.py  visual_show_global_test.py  visual_show_test.py  visual_subplots_test.py  window_geometry_cache_demo.py
release-notes/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.3.0.md
skills/matplotlib-window-tracker/: SKILL.md
skills/mpl-nonblock/: SKILL.md
src/matplotlib_window_tracker/: __init__.py  _patch_cli.py  backends.py  core.py  demos.py  geometry_cache.py  terminal.py
src/mpl_nonblock/: __init__.py  _helpers.py  backends.py  core.py  demos.py  diagnose.py  geometry_cache.py  terminal.py
tests/: test_geometry_cache_io.py  test_geometry_cache_paths.py  test_geometry_cache_schema.py  test_helpers.py  test_hold_windows.py  test_recommended_backend.py  test_show.py  test_subplots.py  test_track_position_size.py  test_two_figures_sin_cos.py
