[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mpl-nonblock"
version = "0.1.0"
description = "Nonblocking Matplotlib helpers for interactive IPython workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Andrea Alberti" }]
dependencies = [
  "matplotlib>=3.5",
]

[project.optional-dependencies]
qt = [
  "PySide6>=6.5",
]

[project.scripts]
mpl-nonblock-diagnose = "mpl_nonblock.diagnose:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mpl_nonblock"]
