[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "matplotlib-window-tracker"
version = "1.2.1"
description = "Persist Matplotlib window geometry across runs (macOS) + terminal-run helpers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Andrea Alberti" }]
dependencies = [
  "matplotlib>=3.5",
]

[project.optional-dependencies]
qt = [
  "PySide6>=6.5",
]
test = [
  "pytest>=7",
]

[project.scripts]
mpl-patch-for-mwt = "matplotlib_window_tracker._patch_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/matplotlib_window_tracker"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = [
  "src/matplotlib_window_tracker",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
exclude = [
  "bin/",
  "examples/",
  "tests/",
  "skills/",
  ".github/",
  ".venv/",
  "tests.py",
  ".DS_Store",
]
